<resources>
    <string name="app_name">MaterialDesignMaster</string>


    <string name="tab_first">First Tab</string>
    <string name="tab_second">Second Tab</string>
    <string name="tab_third">Third Tab</string>
    <string name="tab_four">Fourth Tab</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_home">Home</string>
    <string name="menu_download">Download</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_history">History</string>
    <string name="menu_group">Group</string>
    <string name="menu_tracker">Tracker</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_app">App</string>
    <string name="menu_setting">Setting</string>

    <string name="home_menu_game">Game Center</string>
    <string name="home_menu_download">Download</string>
    <string name="home_menu_search">Search</string>

    <string name="detail">Detail</string>
    <string name="detail_msg1">In my dual profession as an educator and health care provider, I have worked with numerous children infected with the virus that causes AIDS. The relationships that I have had with these special kids have been gifts in my life. They have taught me so many things, but I have especially learned that great courage can be found in the smallest of packages. Let me tell you about Tyler. </string>
    <string name="detail_msg2">Tyler wasn’t willing to give up one single moment of his childhood to this deadly disease. It was not unusual to find him playing and racing around his backyard, wearing his medicine-laden backpack and dragging his tank of oxygen behind him in his little wagon. All of us who knew Tyler marveled at his pure joy in being alive and the energy it gave him. Tyler’s mom often teased him by telling him that he moved so fast she needed to dress him in red. That way, when she peered through the window to check on him playing in the yard, she could quickly spot him. </string>
    <string name="detail_msg3">This dreaded disease eventually wore down even the likes of a little dynamo like Tyler. He grew quite ill and, unfortunately, so did his HIV-infected mother. When it became apparent that he wasn’t going to survive, Tyler’s mom talked to him about death. She comforted him by telling Tyler that she was dying too, and that she would be with him soon in heaven. </string>
    <string name="detail_msg4">A few days before his death, Tyler beckoned me over to his hospital bed and whispered, “I might die soon. I’m not scared. When I die, please dress me in red. Mom promised she’s coming to heaven, too. I’ll be playing when she gets there, and I want to make sure she can find me.</string>

    <string name="start_now">Now Play</string>
    <string name="network_error">Network error!</string>
    <string name="to_tint_activity">To Tint Activity</string>
    <string name="to_detail_activity">To Detail Activity</string>
    <string name="to_bottom_activity">To BottomLayout Activity</string>


    <!-- recommend -->
    <string name="rank">排行榜</string>
    <string name="home_tab_more">更多</string>
    <string name="look_more">查看更多</string>
    <string name="change_recommend">换一波推荐</string>
    <string name="cur_lives_num">当前 %1$s 个直播</string>
    <string name="format_new_msg">%1$s 条新动态，点这里刷新</string>
    <string name="topic">话题</string>
    <string name="goto_look">进去看看</string>

</resources>
