<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#efefef">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_second"
        />

    <Button
        android:id="@+id/btn_tint"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/to_tint_activity"
        android:background="@drawable/btn_more_white"/>

    <Button
        android:id="@+id/btn_detail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/to_detail_activity"
        android:background="@drawable/btn_more_white"/>


    <Button
        android:id="@+id/btn_bottom"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/to_bottom_activity"
        android:background="@drawable/btn_more_white"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_explosionfield"
        android:src="@drawable/ic_launcher"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <com.sk.collapse.customview.BazierSpringView
        android:id="@+id/id_bannerspringview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:visibility="gone">

    <com.sk.collapse.customview.BazierView
        android:id="@+id/id_bannerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        />

    </com.sk.collapse.customview.BazierSpringView>
</LinearLayout>