<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="5dp"
    android:paddingLeft="5dp"
    android:paddingTop="@dimen/activity_vertical_margin">


    <ImageView
        android:id="@+id/item_type_img"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_category_t1" />

    <TextView
        android:id="@+id/item_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/item_type_img"
        android:gravity="center"
        android:textColor="@color/font_normal"
        android:textSize="16sp"
        android:text="@string/detail" />


    <TextView
        android:id="@+id/item_type_rank_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/btn_rank_bg"
        android:drawableLeft="@drawable/ic_header_indicator_rank"
        android:drawablePadding="5dp"
        android:padding="5dp"
        android:text="@string/rank"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:elevation="2dp"
        android:translationZ="1dp"
        android:visibility="gone" />


    <TextView
        android:id="@+id/item_live_all_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@+id/item_type_more"
        android:padding="5dp"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="gone"
        android:text="@string/cur_lives_num"/>

    <TextView
        android:id="@+id/item_type_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:background="@drawable/btn_more_bg"
        android:clickable="true"
        android:text="@string/home_tab_more"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:visibility="visible" />
</RelativeLayout>

