<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/id_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"

        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/id_collapse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"

            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/header"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.2" />


            <android.support.v7.widget.Toolbar
                android:id="@+id/id_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="none"
                app:title="@string/detail"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ToolbarTheme"

                />
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardElevation="7dp"
                app:cardCornerRadius="5dp"
                app:contentPadding="10dp"
                app:theme="@style/Theme.AppCompat.Light.DarkActionBar"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_msg1"
                    android:textSize="14sp"
                    android:textColor="#909090"
                    android:lineSpacingExtra="4dp"

                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardElevation="7dp"
                app:cardCornerRadius="5dp"
                app:contentPadding="10dp"
                app:theme="@style/Theme.AppCompat.Light.DarkActionBar"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_msg2"
                    android:textSize="14sp"
                    android:textColor="#909090"
                    android:lineSpacingExtra="4dp"

                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardElevation="7dp"
                app:cardCornerRadius="5dp"
                app:contentPadding="10dp"
                app:theme="@style/Theme.AppCompat.Light.DarkActionBar"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_msg3"
                    android:textSize="14sp"
                    android:textColor="#909090"
                    android:lineSpacingExtra="4dp"

                    />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardElevation="7dp"
                app:cardCornerRadius="5dp"
                app:contentPadding="10dp"
                app:theme="@style/Theme.AppCompat.Light.DarkActionBar"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_msg4"
                    android:textSize="14sp"
                    android:textColor="#909090"
                    android:lineSpacingExtra="4dp"

                    />
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/id_floatbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:src="@drawable/ic_tv_play"
        android:layout_marginRight="20dp"
        app:layout_anchor="@+id/id_appbar"
        app:layout_anchorGravity="right|bottom"
        />
</android.support.design.widget.CoordinatorLayout>