<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/topCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:fitsSystemWindows="true"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:statusBarScrim="@android:color/transparent"
            app:expandedTitleMarginBottom="16dp"
            app:expandedTitleMarginStart="24dp"
            app:expandedTitleTextAppearance="?android:attr/textAppearanceMedium"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="Android入门到精通"
            android:fitsSystemWindows="true"
            >

            <ImageView
                android:id="@+id/iv_book_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"

                android:scaleType="centerCrop"
                />

            <ImageView
                android:id="@+id/iv_book_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/header"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="bottom"
                android:background="@color/colorPrimary">

            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@android:drawable/ic_dialog_email"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom|right" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardElevation="7dp"
                app:cardCornerRadius="5dp"
                app:contentPadding="10dp"
                app:theme="@style/Theme.AppCompat.Light.DarkActionBar"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_msg1"
                    android:textSize="14sp"
                    android:textColor="#909090"
                    android:lineSpacingExtra="4dp"

                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardElevation="7dp"
                app:cardCornerRadius="5dp"
                app:contentPadding="10dp"
                app:theme="@style/Theme.AppCompat.Light.DarkActionBar"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_msg2"
                    android:textSize="14sp"
                    android:textColor="#909090"
                    android:lineSpacingExtra="4dp"

                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardElevation="7dp"
                app:cardCornerRadius="5dp"
                app:contentPadding="10dp"
                app:theme="@style/Theme.AppCompat.Light.DarkActionBar"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_msg3"
                    android:textSize="14sp"
                    android:textColor="#909090"
                    android:lineSpacingExtra="4dp"

                    />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardElevation="7dp"
                app:cardCornerRadius="5dp"
                app:contentPadding="10dp"
                app:theme="@style/Theme.AppCompat.Light.DarkActionBar"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_msg4"
                    android:textSize="14sp"
                    android:textColor="#909090"
                    android:lineSpacingExtra="4dp"

                    />
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>